profile page tab alignment issue opend

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -857,9 +857,9 @@ div.messages.status{
             padding-bottom:0px;
             transform:translate(0,8px,0);
             margin-top: -12px;
-            padding-bottom: 14px;
+            padding-bottom: 24px;
           }
-          padding-top: 0.6em;
+           padding-top: 14px;
         }
         a.active{
             border-color:$page-background ;
